Add markdown, table and title blocks

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -16,3 +16,4 @@ $border-size: 2px;
 $border-style: solid;
 $default-border: $border-size $border-style $accent-color;
 
+$default-max-width: 800px;
